--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: marcci
 description: M-Vet App
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 2.0.0+19
 environment:
-  sdk: '>=3.0.6 <4.0.0'
-
+  sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
   flutter:
@@ -36,8 +35,8 @@ dependencies:
   fluttertoast: ^8.2.4
   flutter_html: ^3.0.0-beta.2
   material_design_icons_flutter: ^7.0.7296
-  form_builder_image_picker: 
-  form_builder_phone_field: 
+  form_builder_image_picker:
+  form_builder_phone_field:
   blurrycontainer: ^1.0.2
   flutter_typeahead: ^5.0.1
   dropdown_search: ^5.0.6
@@ -63,10 +62,6 @@ dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.3.2
   change_app_package_name: ^1.0.0
-
-
-
-
 
   # Icons
   flutter_feather_icons: ^2.0.0+1
