--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^11.3.1
   loading_overlay: ^0.3.0
   modal_progress_hud_nsn: ^0.5.1
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
